<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".view.home">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/devine"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/purple"
        android:layout_marginTop="10dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/j1"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtNomPlayer1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:hint="@string/txtNom"
                android:inputType="text"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/j2"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtNomPlayer2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:hint="@string/txtNom"
                android:inputType="text"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>
    <Button
        android:id="@+id/btnJouer"
        android:text="@string/jouer"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_customise_form"/>
</LinearLayout>